# trading-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: daily.yml
docs/: dip.html  dip_eth.html  donnie.html  donnie_eth.html  grudge.html  index.html  kepler.html  kepler_eth.html  spicy.html  vector.html  vector_eth.html
src/agent/: backtest.py  broker.py  config.py  costs.py  dashboard.py  data.py  db.py  degen.py  lab.py  ledger.py  metrics.py  review.py  risk.py  run_daily.py  signal.py  strategies.py
tests/: test_costs_ledger.py  test_degen.py  test_risk.py  test_signal.py  test_strategies.py
